Fix overflow in display
- resolves #33

--- a/src/features/display/Display.module.css
+++ b/src/features/display/Display.module.css
@@ -21,5 +21,5 @@
   font-size: 1.5rem;
   color: yellow;
   text-align: right;
-  overflow: scroll;
+  overflow: auto;
 }
